fix: breadcrumb, banner, action menu alignment

--- a/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/components/_action-group-menu.scss
+++ b/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/components/_action-group-menu.scss
@@ -25,7 +25,7 @@
  */
 
 .action-group-menu {
-  padding-top: 10px;
+  padding-top: 27px;
 
   .inline-spinner {
     width: 30px;
